--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <hr class="b">
     <footer>
       <div class="web">
-        <img src="../Car-site-4-stu/assets/Vector-1.svg" alt="">
-        <img src="../Car-site-4-stu/assets/Vector-2.svg" alt="">
+        <img src="./src/Vector-1.svg" alt="">
+        <img src="./src/Vector-2.svg" alt="">
       <div class="lorem">
         <p>Lorem ipsum dolor sit amet consectetur,on. <br>
            adipisicing elit. Quo deleniti quisquam sa <br>
