--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="src/style.css">
   <title>Document</title>
 </head>
 
 <body>
   <main>
-    <header>
+    <header data-aos="fade-down">
       <h2>background genarator</h2>
       <div class="l">
         <button onclick="sigin()" id="sigin-in">sgin in</button>
@@ -29,8 +30,8 @@
         </div>
         </div>
     </header>
-    <section class="color">
-      <div class="background">
+    <section class="color" data-aos="zoom-in">
+      <div class="background" >
         <input type="color" id="color1" value="#fff">
         <input type="color" id="color2" value="#000">
         <div class="background2">
@@ -45,25 +46,45 @@
     </section>
     <hr class="b">
     <section class="hestory">
-      <div class="p1">
+      <div class="p1" data-aos="fade-up-right">
          <h5>ساخت ترکیب رنگی خودتان را شروع کنید </h5>
          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto id natus fuga cupiditate perspiciatis nihil illo culpa </p>
       </div>
-      <div class="p2">
+      <div class="p2" data-aos="fade-up-left">
         <h5>این سایت کاملا رایگان ساخت رنگ را انجام میدهد</h5>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto id natus fuga cupiditate perspiciatis nihil illo culpa </p>
       </div>
-      <div class="p3">
+      <div class="p3" data-aos="zoom-in-down">
         <h5>شروع کنید</h5>
         <br>
-        <button onclick="sigin()">sgin in</button>
+        <button onclick="sigin()" id="sigin-in2" >sgin in</button>
       </div>
+    </section>
+    <hr class="b">
+    <section class="hestory">
+      <div class="p4" data-aos="fade-up-left">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam a aperiam fuga 
+            saepe magni, obcaecati autem molestias ipsa modi illum nisi. Reprehenderit non eligendi
+             deserunt obcaecati cumque amet eius excepturi.</p>
+        </div>
+      <div data-aos="fade-up-right">
+        <img class="img" src="./src/Rectangle (2).png" alt="">
+      </div>
+      <div data-aos="fade-up-left">
+        <img class="img" src="./src/dell-xps-17-06.webp" alt="">
+      </div>
+      
+      <div class="p4" data-aos="fade-up-right">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam a aperiam fuga 
+            saepe magni, obcaecati autem molestias ipsa modi illum nisi. Reprehenderit non eligendi
+             deserunt obcaecati cumque amet eius excepturi.</p>
+        </div>
     </section>
     <br>
     <br>
     <hr class="b">
     <footer>
-      <div class="web">
+      <div class="web" data-aos="fade-right">
         <img src="./src/Vector-1.svg" alt="">
         <img src="./src/Vector-2.svg" alt="">
       <div class="lorem">
@@ -73,7 +94,7 @@
           Aliquam ad ipsam autem eaque, nulla dolorem!</p>
       </div>
       </div>
-      <div class="icone">
+      <div class="icone" data-aos="fade-left">
         bg
       </div>
     </footer>
@@ -95,6 +116,10 @@
    </div>
     <script src="./src/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({duration: 1400,});
+    </script>
   </main>
   
 </body>
